5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2498.log
== TEST (2019-05-09 17:48:25) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: 0"))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:48:47) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: 0"))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:49:06) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: 0"))/100

anos = 0

while ( a > b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:49:17) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:49:41) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a <1 b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.138272
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 8
    while ( a <1 b ):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:49:47) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:47:58) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.153964
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:47:59) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.177369
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:03) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:48:05) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.206016
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:05) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:05) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:05) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:06) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:10) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:10) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:12) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:13) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:14) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:19) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:48:20) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:49:08) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:49:26) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.268993
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:49:45) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a > b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:50:08) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:32:01) 
-- CODE:
a = int(input("valor a: "))
b = int(input("valor b: "))
c = float(input("valor de c: "))/100
d = float(input("valor de d: "))/100

anos = 0

while ( a < b ):
	a = a + ( a * c )
	b = b + ( b * d )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:35:35) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:36:03) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:36:05) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
	print(anos)
-- EXECUTION TIME:
0.119783
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:36:23) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A > B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:36:52) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:37:26) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:37:51) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))/100
PB = float(input("crescimento populacional B: "))/100

anos = 0

while ( A < B ):
	A = A + ( A * PA )
	B = B + ( B * PB )
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.120126
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:39:19) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.143827
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:39:21) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:39:22) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:39:40) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.130713
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:19:38) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:19:43) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:19:45) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:40:08) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos += 1
print(anos)
-- EXECUTION TIME:
0.141539
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:40:09) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))

anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos += 1
print(anos)
-- EXECUTION TIME:
0.192829
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:55:37) 
-- CODE:
A = int(input("numero de hab de A: "))
B = int(input("numero de hab de B: "))
PA = float(input("crescimento populacional A: "))
PB = float(input("crescimento populacional B: "))
#variavel contadora
anos = 0

while ( A < B ):
	A = A + ( A * (PA/100) )
	B = B + ( B * (PB/100) )
	anos += 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
